# ai

./: .gitignore  LICENSE  README.md  ai.code-workspace  desktop.ini  flake.nix  pyproject.toml  talent_land.ipynb  todo.md
doc/: gpu-troubleshooter.ipynb  init_notebook.py  notebook.py  some-notebook.ipynb  system-bench.ipynb
doc/ga/: fn-optimization.ipynb  knapsack.ipynb  some.md  str_matching.ipynb  tsp.ipynb
mcp/: analysis.py  analyzer.py  code_analyzer.py  directives.py  example.py  main.py  planning.py  prompts  release_ops.py  test_server.py  workflow.py
mcp-rs/src/: main.rs
mcp/lib/: prompt_loader.py
mcp/prompts/: code-explanation.md  conventional-commit.md  core-philosophy.md  directive-svelte5.md  guide-blueprint-skeleton.md  new-version-commit.md  new-version-release.md  proactive-advisor.md  project-analysis.md  refactoring-guide.md  utility-and-tests.md
scripts/: ai-google-api.py  check_gpu.py  download_readme.py  gitintest.py  gpu_check.py  ingest_gh.py  ingest_readmes.py  some.py
src/: main.py  pso.py
src/lib/: ga.py  pso.py  pso_bench.py  ui.py
src/lib/benchmark/: __init__.py  bench_pso.py  configs.py  fn.py  problems.py
src/lib/benchmarks/: bench_pso.py
src/lib/examples/: fn_optimization.py  knapsack.py  str_matching.py  tsp.py
src/lib/model/: base.py  ga.py  pso.py
src/lib/mpc/: server.py
src/lib/tools/: asset_manager.py  formatting.py
src/lib/utils/: asset_manager.py  path_solver.py
src/std/: 00-stack_lifo.asm
