[project]
name = "ai"
authors = [
    { name = "Fernando Bryan Reza Campos", email = "fer.rezac@outlook.com" },
]
version = "0.1.0"
description = "Some of the stuff I've created while learning the 'State of the Art' in AI."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    # Core Deep Learning
    # for development
    "torch",
    # * for deployment
    # "tensorflow>=2.18.0",  # Includes keras

    # Tools
    "ipykernel>=6.29.5", # Jupyter kernel

    # Data Science & ML
    "numpy", # Numerical computing
    # "pandas>=1.4.0",        # Data manipulation
    "polars>=1.30.0", # Fast DataFrame library in Rust
    # "scikit-learn>=1.6.1", # Traditional machine learning
    # "scipy>=1.15.2",       # Scientific computing
    "matplotlib>=3.10.3", # Plotting and visualization
    "seaborn>=0.13.2", # Statistical data visualization

    # Computer Vision
    "opencv-python>=4.11.0.86", # CV2 for computer vision
    "pillow>=11.2.1", # Image processing

    # # Natural Language Processing
    # "transformers>=4.49.0", # State-of-art NLP models
    # "spacy>=3.8.4",        # Industrial-strength NLP
    # "nltk>=3.9.1",         # Natural Language Toolkit
    "google-genai>=1.19.0",

    # * MCP
    "mcp[cli]>=1.9.3",

    # Some:
    "httpx>=0.28.1",

]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
# torchvision = [
#   { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]