[project]
name = "ai"
authors = [
	{ name = "Fernando Bryan Reza Campos", email = "fer.rezac@outlook.com" },
]
version = "0.1.0"
description = "Some of the stuff I've created while learning the 'State of the Art' in AI."
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
	"ai", 
	"deep learning"
	]
dependencies = [
	# Core Deep Learning
	"torch",
	# * for deployment
	# "tensorflow>=2.18.0",  # Includes keras
	# "torchvision>=0.19.0", # Computer vision library for PyTorch
	# "torchaudio>=2.19.0", # Audio processing library for PyTorch
	# "torchtext>=0.19.0", # Text processing library for PyTorch
	# "torchdata>=0.7.0", # Data loading utilities for PyTorch
	# # "tensorflow-cpu>=2.18.0", # CPU version of TensorFlow
	# # "tensorflow-gpu>=2.18.0", # GPU version of TensorFlow
	# Tools
	"notebook>=7.4.5",
	"ipykernel>=6.30.1", # Jupyter kernel
	# Data Science & ML
	"numpy", # Numerical computing
	# "pandas>=1.4.0",        # Data manipulation
	"polars>=1.32.3", # Fast DataFrame library in Rust
	# "scikit-learn>=1.7.1", # Traditional machine learning
	# "scipy>=1.16.1",       # Scientific computing
	"matplotlib>=3.10.6", # Plotting and visualization
	"seaborn>=0.13.2", # Statistical data visualization
	# Computer Vision
	"opencv-python>=4.12.0.88", # CV2 for computer vision
	"pillow>=11.3.0", # Image processing
	# # Natural Language Processing
	# "transformers>=4.55.3", # State-of-art NLP models
	# "spacy>=3.8.7",        # Industrial-strength NLP
	# "nltk>=3.9.1",         # Natural Language Toolkit
	# AI
	"google-genai>=1.32.0",
	# * MCP
	"mcp[cli]>=1.13.1",
	# Some:
	"httpx>=0.28.1",
	"gitingest>=0.3.1",
	"rich>=14.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
	{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
# torchvision = [
#   { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]


[tool.pyright]
venvPath = "."
venv = ".venv"
